# nickel

./: Cargo.toml  RELEASES.md  flake.nix
.github/workflows/: continuous-integration.yml  release-artifacts.yaml  release-python.yml  upload-pr-benchmarks.yaml
cli/src/: input.rs
core/: Cargo.toml
core/src/: label.rs  position.rs  program.rs  stash.rs  typ.rs
core/src/error/: mod.rs
core/src/eval/: callstack.rs  cui.rs  mod.rs  operation.rs  semantic_hash.rs
core/src/eval/cache/: incremental_ng.rs  lazy.rs  mod.rs
core/src/eval/value/: mod.rs  stash.rs
core/src/serialize/: mod.rs
core/src/term/: mod.rs  record.rs
nickel/: Cargo.toml
nickel/src/: lib.rs
package/: Cargo.toml
parser/: Cargo.toml
parser/src/: error.rs  files.rs  identifier.rs  position.rs  stash.rs  typ.rs
parser/src/ast/: mod.rs
scripts/: release.sh
stashed-stdlib/: Cargo.toml  build.rs
stashed-stdlib/src/: lib.rs
utils/src/: bench.rs
vector/: Cargo.toml
vector/src/: slice.rs  vector.rs
wasm-repl/: Cargo.toml
