[package]
name = "nickel-lang-stashed-stdlib"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
nickel-lang-core.workspace = true
rkyv.workspace = true

[build-dependencies]
nickel-lang-core.workspace = true
rkyv.workspace = true
